images files added and changend border color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
             html
             {
-                background-color: lightcoral;
+                background-color:  #b3d9ff;
             }
             .abc
             {
@@ -23,7 +23,7 @@
             width: 500px;
             height:700px;
             background-color: antiquewhite;
-            border-color: black;
+            border-color: brown;
             border-style: solid;
             border-width: 5px;
             border-radius: 25;
