--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
             {
                 background-color:  #b3d9ff;
             }
-            .abc
+            .heading
             {
-                height: auto;;
+                height: auto;
                 width: auto;
                 background-color: lemonchiffon;
                 border: 5px solid black;
@@ -17,6 +17,11 @@
                 padding:10px;
                 margin: 5;
                 text-align: center;
+            }
+            .heading:hover
+            {
+                background-color:  #80ffaa
+;
             }
          .box
          {
@@ -47,7 +52,7 @@
         </style>
     </head>
     <body>
-        <h1 class="abc"> Welecome to Foodie Hoodie Food Cart</h1>
+        <h1 class="heading"> Welecome to Foodie Hoodie Food Cart</h1>
         <div class="box">
             <img src="pizza.png"  width="400px"height="400px"  alt="pizza">
             <h3>Pizza </h3>
